Add tag to password confirmation field

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,7 +20,7 @@
         <%= form.password_field :password, class: "block col-12 field" %>
       </div>
       <div>
-        <%= form.label :password_confirmation %>
+        <%= form.label :password_confirmation, "Password Confirmation" %>
         <%= form.password_field :password_confirmation, class: "block col-12 field" %>
       </div>
       <%= form.submit 'Create Account', class: "mt2 btn btn-primary mb1 bg-teal" %>
