--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,13 @@
 <section class="dashboard-main">
-  <h1> <%= current_user.first_name %>'s Dashboard </h1> 
+  <h3>Logged in as <%= current_user.first_name %> <%= current_user.last_name %>
+  <h1><%= current_user.first_name %>'s Dashboard </h1> 
   <%= link_to "Connect with Github", "https://github.com/login/oauth/authorize?client_id=#{ENV['GITHUB_CLIENT_ID']}&scope=repo", class: "btn btn-primary mb1 bg-teal" %>
   <%= button_to 'Log Out', logout_path, method: 'delete', class: "btn btn-primary mb1 bg-teal" %>
   <h3>Account Details</h3>
   <ul>
     <li> <%= current_user.first_name  %> <%= current_user.last_name %> </li>
     <li> <%= current_user.email%> </li>
+    <li>Activation Status: <%= current_user.activation_status%>
   </ul>
   <section>
     <h1>Bookmarked Segments</h1>
