--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -9,14 +9,16 @@
   <tr>
     <th>Title</th>
     <th>Actions</th>
+    <th>Classroom</th>
   </tr>
   <% @facade.tutorials.each do |tutorial| %>
-    <tr class="admin-tutorial-card">
+    <tr class="admin-tutorial-card" id="tutorial-<%= tutorial.id %>">
       <td><%= link_to tutorial.title, tutorial_path(tutorial) %></td>
       <td>
         <%= link_to "Edit", edit_admin_tutorial_path(tutorial) %> |
         <%= link_to "Delete", admin_tutorial_path(tutorial), method: :delete, data: { confirm: 'Are you sure?' } %>
       </td>
+      <td><%= button_to "#{tutorial.classroom}", admin_tutorials_classroom_path(tutorial, classroom: tutorial.classroom), method: :patch, class: "video-position-submit btn btn-outline" %></td>
     </tr>
   <% end %>
 </table>
